[package]
name = "tess-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
eyre = "0.6.8"
log = "0.4.17"
opencv = "0.79.0"
tesseract = "0.13.0"

[features]
resize = []
perf_logging = []
default = [ "resize", "perf_logging" ]
